--- a/nft-preview-card-component/index.html
+++ b/nft-preview-card-component/index.html
@@ -13,8 +13,10 @@
   
 </head>
 <body>
-  <div class="container">
+  <div class="container"><article>
     <img class="mainimg" src="images/image-equilibrium.jpg" alt="">
+    <div> <img src="images/image-view.jpg" alt=""></div>
+    </article>
   <article>
   <h1>Equilibrium #3429</h1>
 </article><article>
