--- a/nft-preview-card-component/index.html
+++ b/nft-preview-card-component/index.html
@@ -15,7 +15,7 @@
 <body>
   <div class="container"><article>
     <img class="mainimg" src="images/image-equilibrium.jpg" alt="">
-    <div> <img src="images/image-view.jpg" alt=""></div>
+    <div> <img src="images/icon-view.jpg" alt=""></div>
     </article>
   <article>
   <h1>Equilibrium #3429</h1>
