--- a/nft-preview-card-component/index.html
+++ b/nft-preview-card-component/index.html
@@ -13,7 +13,7 @@
   
 </head>
 <body>
-  <div class="container"><article>
+  <div class="container"><article class="main-image">
     <img class="mainimg" src="images/image-equilibrium.jpg" alt="">
     <div> <img src="images/icon-view.jpg" alt=""></div>
     </article>
