--- a/nft-preview-card-component/index.html
+++ b/nft-preview-card-component/index.html
@@ -13,10 +13,10 @@
   
 </head>
 <body>
-  <div class="container"><article class="main-image">
+  <div class="container">
+    <article class="main-image">
     <img class="mainimg" src="images/image-equilibrium.jpg" alt="">
-    <div> <img src="images/icon-view.jpg" alt=""></div>
-    </article>
+  <div><img src="images/icon-view.svg" alt=""></div></article>
   <article>
   <h1>Equilibrium #3429</h1>
 </article><article>
