--- a/nft-preview-card-component/index.html
+++ b/nft-preview-card-component/index.html
@@ -32,7 +32,7 @@
 </div>
 <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#"><span>Ahmed ❤</span></a>.
+    Coded by <a href="https://github.com/ahmed13m"><span>Ahmed ❤</span></a>.
 </div>
 </body>
 </html>
